# SimpleRPG

./: CMakeLists.txt  CMakePresets.json
SimpleRPG/: CMakeLists.txt  Core.cpp  Core.h  Main.cpp  SimpleRPG.cpp  Time.cpp  Time.h  Vectors.h  def.h  main.cpp
